src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTexture_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTexture_StringErrorContext.class */
public final class WGLARBRenderTexture_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("wglBindTexImageARB(JI)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTextureErrorContext");
        methods.put("wglReleaseTexImageARB(JI)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTextureErrorContext");
        methods.put("nwglSetPbufferAttribARB(JJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTextureErrorContext");
        methods.put("wglSetPbufferAttribARB(JLjava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTextureErrorContext");
        methods.put("wglSetPbufferAttribARB(J[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBRenderTextureErrorContext");
        return methods;
    }
}
